--- a/css/style.css
+++ b/css/style.css
@@ -418,7 +418,7 @@ ol {
 	height: 50px;
 	border: 1px solid #ebebeb;
 	margin-top: 30px;
-	margin-left: 29px;
+	margin-left: 60px;
 }
 
 .inner-header .advanced-search .category-btn {
@@ -426,7 +426,7 @@ ol {
 	float: left;
 	background: transparent;
 	border: none;
-	padding-left: 23px;
+	padding-left: 39px;
 	padding-top: 11px;
 	padding-bottom: 13px;
 	padding-right: 60px;
@@ -449,8 +449,8 @@ ol {
 	position: absolute;
 	right: 11px;
 	top: 10px;
-	content: "3";
-	font-family: "ElegantIcons";
+	/*content: "3";
+	font-family: "ElegantIcons";*/
 	font-size: 16px;
 	color: #b2b2b2;
 }
@@ -461,7 +461,7 @@ ol {
 }
 
 .inner-header .advanced-search .input-group input {
-	width: 100%;
+	width: 190%;
 	height: 100%;
 	border: none;
 	font-size: 16px;
@@ -473,11 +473,11 @@ ol {
 	font-size: 16px;
 	color: #ffffff;
 	position: absolute;
-	right: -3px;
+	right: -9px;
 	top: -1px;
 	border: 1px solid #e7ab3c;
 	background: #e7ab3c;
-	padding: 12px 16px 12px;
+	padding: 15.5px 18px 15.5px;
 	cursor: pointer;
 }
 
